--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href='style.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href='style.css'>
+    <title></title>
 </head>
 <body>
     <div class="container">
         <div class="quotes">
-            <p id="quote">Hello World</p>
-            <h3 id="author">Codefoxx</h3>
+            <p id="quote">Тут будет цитата</p>
+            <h3 id="author">Тут будет автор</h3>
         </div>
     </div>
     <div style="text-align: center;">
-        <button onklick="generate()" type="button" class="btn btn-info">Сгенерировать цитату</button>
+        <button onclick="generate()" type="button" class="btn btn-info">Сгенерировать цитату</button>
     </div>
     <script src="script.js"></script>
 </body>
